--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ closePopup.onclick = () => popup.classList.remove("active");
 yesBtn.onclick = () => {
   if (navigator.vibrate) navigator.vibrate(50);
  
-  const message = encodeURIComponent("It's a yes daddy, please do whatever you want with me I'm gonna be a good girl I swear 😫");
+  const message = encodeURIComponent("It's a yes of course daddy 😫");
   const url = "https://wa.me/351929177740?text=" + message;
  
   window.location.href = url;
@@ -259,4 +259,5 @@ noBtn.onclick = () => {
  
 </body>
 </html>
+
 
